--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 install:
-  - wget --header='Accept:application/octet-stream' https://api.github.com/repos/netlify/netlifyctl/releases/assets/6273453 -O netlifyctl-linux-amd64-0.3.2.tar.gz
+  - wget --header='Accept:application/octet-stream' --header='User-Agent:jt-nti' https://api.github.com/repos/netlify/netlifyctl/releases/assets/6273453 -O netlifyctl-linux-amd64-0.3.2.tar.gz
   - tar -xzvf netlifyctl-linux-amd64-0.3.2.tar.gz
 script: true
 deploy:
