--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 install:
+  - jq --version
   - wget --header='Accept:application/octet-stream' --user=$GITHUB_USER --password=$GITHUB_TOKEN https://api.github.com/repos/netlify/netlifyctl/releases/assets/6273453 -O netlifyctl-linux-amd64-0.3.2.tar.gz
   - tar -xzvf netlifyctl-linux-amd64-0.3.2.tar.gz
 script:
