--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 install:
-  - curl https://api.github.com/repos/netlify/netlifyctl/releases/latest
-  - curl https://api.github.com/repos/netlify/netlifyctl/releases/latest | jq '.'
-  - curl https://api.github.com/repos/netlify/netlifyctl/releases/latest | jq '.assets[]'
-  - curl https://api.github.com/repos/netlify/netlifyctl/releases/latest | jq '.assets[] | select(.name | contains("netlifyctl-linux-amd64-0.4.0.tar.gz"))?'
+  - curl --user "$GITHUB_USER:$GITHUB_TOKEN" https://api.github.com/repos/netlify/netlifyctl/releases/latest
+  - curl --user "$GITHUB_USER:$GITHUB_TOKEN" https://api.github.com/repos/netlify/netlifyctl/releases/latest | jq '.'
+  - curl --user "$GITHUB_USER:$GITHUB_TOKEN" https://api.github.com/repos/netlify/netlifyctl/releases/latest | jq '.assets[]'
+  - curl --user "$GITHUB_USER:$GITHUB_TOKEN" https://api.github.com/repos/netlify/netlifyctl/releases/latest | jq '.assets[] | select(.name | contains("netlifyctl-linux-amd64-0.4.0.tar.gz"))?'
   - false && wget --header='Accept:application/octet-stream' --user=$GITHUB_USER --password=$GITHUB_TOKEN https://api.github.com/repos/netlify/netlifyctl/releases/assets/6273453 -O netlifyctl-linux-amd64-0.3.2.tar.gz
   - false && tar -xzvf netlifyctl-linux-amd64-0.3.2.tar.gz
 script:
